--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".HelpMessage"></activity>
         <activity android:name=".DeliveryActivity"></activity>
+        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".AboutusActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
