--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         <activity android:name=".DeliveryActivity"></activity>
         <activity android:name=".PaymentActivity"></activity>
         <activity android:name=".AboutusActivity"></activity>
+        <activity android:name=".CartActivity">
+
+
+        </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".MainActivity">
