--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     //implementation 'com.android.support:cardview-v7:21.0.0-rc1'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
 
 
