--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".HelpMessage"></activity>
+        <activity android:name=".HelpMessage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity android:name=".DeliveryActivity"></activity>
         <activity android:name=".PaymentActivity"></activity>
         <activity android:name=".AboutusActivity"></activity>
@@ -20,11 +27,7 @@
         <activity android:name=".PaymentMethod"></activity>
         <activity android:name=".FoodListActivity"></activity>
         <activity android:name=".RestaurantActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".CartActivity">
 
